Fix word wrapping issue

--- a/src/styles/resources.scss
+++ b/src/styles/resources.scss
@@ -1,7 +1,6 @@
 .resources {
   &__card-label {
     color: $mustard-yellow;
-    margin-left: 5px;
     margin-bottom: 25px;
     cursor: pointer;
     padding: 25px 0 0 25px;
